
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4.1 (Development, See CVS) ----

2003-05-01, Kato
  Fixed issues with creating tickets via email (loss of spaces and returns)
  Enhanced the email template parsing functions
  Improved email error messages, fixed 'egate user not found' bug
    - zentrack/includes/egate_utils.php 1.30
    - zentrack/includes/zenTrack.class 1.97
  Added highlighting for various priorities
    - zentrack/includes/templates/ticket_detailsBox.php 1.8
  Added postgres fix for return codes
    - zentrack/includes/db.class 1.23
  Improved gd_info messages
    - zentrack/includes/footer.php 1.20
  Removed notices for english (strings should be blank)
    - zentrack/includes/translator.class 1.6

2003-04-30, Kato
  Resolved issue with not being able to access tr() while
  using the egate_utils, causing an error
    - zentrack/includes/egate_utils.php 1.28
    - zentrack/includes/headerInc.php 1.29
    - zentrack/includes/zenTrack.class 1.96

2003-04-27, Rob Hillis
  Fix translation link to user permissions after adding a new user
    - zentrack/www/admin/addUserSubmit.php 1.9
  Fix minor spelling error in add/edit user form.
    - zentrack/includes/templates/userAdd.php 1.10

2003-04-23, Rob Hillis
  Colour-code priorities for easy identification
    - zentrack/includes/templates/listTickets.php 1.11
    - zentrack/includes/templates/ticket_titleBox.php 1.7
    - zentrack/www/styles.php 1.9
  Allow admins to set a user's home bin to -All-
    - zentrack/includes/templates/userAdd.php 1.9
    - zentrack/includes/templates/userSearchForm.php 1.7
  Fix bin order in "Options->Home Bin", User search form and user edit form
    - zentrack/includes/templates/homebinForm.php 1.8
    - zentrack/includes/templates/userAdd.php 1.8