@@ -3401,21 +3401,7 @@ msgstr "version"
 #args ""
 msgid "yes"
 msgstr "oui"
-
-
-#file "D:\zentrack\zentrack/includes/templates/newTicketForm.php"
-#args ""
-msgid ($td
-msgstr ($td
-
-
-#file "D:\zentrack\zentrack/includes/templates/languageForm.php"
-#args ""
-msgid ucwords($l)
-msgstr ucwords($l)
-
-
-msgid "Less"
+msgid "Less"
 msgstr ""
 
 
